Added exit code checks/ grep command for simplicity